@@ -23,6 +23,7 @@
   <include package=".templates" />
   <include package=".google" />
   <include package=".relations" />
+  <include package=".restapi" />
   <include package=".widgets" />
   <include package=".facetednavigation" />
   <include package=".updates" />
