@@ -1,0 +1,4 @@
+<configure xmlns="http://namespaces.zope.org/zope">
+  <include package="plone.restapi" />
+  <include package=".data" />
+</configure>
