@@ -1,0 +1,3 @@
+<configure xmlns="http://namespaces.zope.org/zope">
+  <include package=".rods" />
+</configure>
